<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4LunchApp</string>
    <string name="bienvenue_sur_go4lunch">Bienvenue sur Go4Lunch</string>
    <string name="se_connecter_avec_facebook">se connecter avec Facebook</string>
    <string name="se_connecter_avec_google">se connecter avec Google</string>

    //Facebook Auth values
    <string name="facebook_app_id">718578949964841</string>
    <string name="fb_login_protocol_scheme">fb718578949964841</string>
    <string name="facebook_client_token">56789</string>

    //Google API keys
    <string name="google_map_key">AIzaSyDOBddcSKOqcEQ5HzeDySmC2vAQw9130lU</string>
    <string name="google_place_key">AIzaSyDu_b1WHImUbpk593yksTIpdcJJ3JjVwVY</string>

    <string name="com_facebook_loginview_logged_in_using_facebook_f1gender">required</string>

    <string name="map">map</string>
    <string name="restaurants">restaurants</string>
    <string name="workmates">workmates</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="your_name">your name</string>
    <string name="user_profile">User profile</string>
    <string name="open_nav">nav open</string>
    <string name="close_nav">close nav</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="restaurant_name">Name</string>
    <string name="restaurant_adress">Restaurant address</string>
    <string name="opening">Opening</string>
    <string name="restaurant_photo">restaurant_photo</string>
    <string name="distance">distance</string>
    <string name="count">(0)</string>
    <string name="star1" tools:ignore="Typos">star1</string>
    <string name="star2">star2</string>
    <string name="star3">star3</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="appeler">Appeler</string>
    <string name="favori">Favori</string>
    <string name="site_internet">Site internet</string>
    <string name="name_of_user">name_of_user</string>
    <string name="email">email</string>
    <string name="rechercher_des_lieux">Rechercher des lieux</string>
    <string name="search_nearby_restaurants">Search nearby restaurants</string>
    <string name="call">call</string>
    <string name="favorites">favorites</string>
    <string name="website">website</string>
    <string name="id">ID</string>
    <string name="search">Search</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="choice">Choice</string>

</resources>