<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/item_view">

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:maxWidth="150dp"
        android:maxLines="1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxWidth="220dp"
        android:maxLines="1"
        android:text="@string/restaurant_adress"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/distance"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_photo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/opening"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/restaurant_photo"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/restaurant_photo"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/workmates_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/restaurant_photo"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_photo"
        app:layout_constraintStart_toEndOf="@+id/workmates_number"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_photo"
        android:contentDescription="@string/star1" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/star1"
        android:contentDescription="@string/star2" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/star2"
        android:contentDescription="@string/star3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>