<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity"
    android:background="@color/white">
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_sur_go4lunch"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_connexion_facebook"/>

    <Button
        android:id="@+id/btn_connexion_facebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter_avec_facebook"
        android:background="@color/facebook_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_connexion_google"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter_avec_google"
        android:background="@color/google_color"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connexion_facebook" />" />
</androidx.constraintlayout.widget.ConstraintLayout>